--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
   <body>
     <header></header>
     <main>
-      <div class="add">
-        <img src="assets/svgs/plus.svg" />
-      </div>
-      <div class="add">
+      <div class="circle dot"></div>
+      <div class="circle add">
         <img src="assets/svgs/plus.svg" />
       </div>
       <!-- Vendor JS Files -->
