--- a/index.html
+++ b/index.html
@@ -38,9 +38,23 @@
   <body>
     <header></header>
     <main>
-      <div class="circle dot"></div>
-      <div class="circle add">
-        <img src="assets/svgs/plus.svg" />
+      <div id="dots-holder" class="dots">
+        <div class="circle dot"></div>
+        <div id="add" onclick="addDot()" class="circle add">
+          <img src="assets/svgs/plus.svg" />
+        </div>
+      </div>
+      <div class="edit">
+        <div class="box">
+          <div class="text">
+            <textarea class="one mb-5"></textarea>
+            <textarea class="two"></textarea>
+          </div>
+          <div class="color">
+            <div class="smalldot"></div>
+            <div class="smalldot"></div>
+          </div>
+        </div>
       </div>
       <!-- Vendor JS Files -->
       <script src="assets/vendor/jquery/jquery.min.js"></script>
@@ -52,7 +66,7 @@
       <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
       <!-- Main JS File -->
-      <script src="assets/js/main.js"></script>
+      <script src="assets/js/script.js"></script>
     </main>
   </body>
 </html>
